# diplomacy_cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
main/: main.cpp
source/: CMakeLists.txt  game.cpp  game.h
source/drawable_objects/: clickable_object.h  drawable_object.h  entity.cpp  entity.h  entity_info_interface.cpp  entity_info_interface.h  hittable_entity.cpp  hittable_entity.h  selection_border.cpp  selection_border.h
source/drawable_objects/building/: barrack.cpp  barrack.h  building.cpp  building.h  building_with_hp.cpp  building_with_hp.h  nature.h  outside_building.cpp  outside_building.h  suburb_building.cpp  suburb_building.h  town.cpp  town.h
source/drawable_objects/building/under_construction/: under_construction.h
source/drawable_objects/cell/: cell.cpp  cell.h  coord_converter.cpp  coord_converter.h  coord_translation.h  hexagon.cpp  hexagon.h
source/drawable_objects/interface_elements/: image.cpp  image.h  rounded_rectangle.cpp  rounded_rectangle.h  rounded_rectangle_with_text.cpp  rounded_rectangle_with_text.h  switch_button.cpp  switch_button.h  text.cpp  text.h  triangle.cpp  triangle.h
source/drawable_objects/unit/: unit.cpp  unit.h  unit_logic.cpp  unit_logic.h
source/drawable_objects/unit/melee/: peasant.cpp  peasant.h
source/drawable_objects/unit/range/: archer.cpp  archer.h  catapult.cpp  catapult.h  catapult_logic.cpp  catapult_logic.h  range_unit.cpp  range_unit.h  range_unit_logic.cpp  range_unit_logic.h
source/drawable_objects_groups/: drawable_objects_group.cpp  drawable_objects_group.h  scene.cpp  scene.h
source/drawable_objects_groups/game_scene/: game_scene.cpp  game_scene.h  grid.cpp  grid.h  grid_logic_helper.cpp  grid_logic_helper.h  undo_button.cpp  undo_button.h
source/drawable_objects_groups/game_scene/grid/: action.cpp  action.h  cells.cpp  cells.h  grid.cpp  grid.h  text.cpp  text.h
source/drawable_objects_groups/interfaces/: building_production_slots.cpp  building_production_slots.h  entity_info.cpp  entity_info.h  entity_info_interface.cpp  entity_info_interface.h  production.cpp  production.h  production_slots.cpp  production_slots.h  town_production.cpp  town_production.h  unit_production.cpp  unit_production.h
source/geometry/: point.h
source/next_turn/: next_turn_button.cpp  next_turn_button.h  sudden_death_info.h
source/options/: game.cpp  game.h  hexagon.cpp  hexagon.h  options.cpp  options.h
source/player/: entity_factories.cpp  entity_factories.h  entity_stats.cpp  entity_stats.h  player.cpp  player.h  player0.cpp  player0.h  players.cpp  players.h  unit_stats.cpp  unit_stats.h
source/player/factories/: building.cpp  building.h  building_and_suburb.cpp  building_and_suburb.h  entity.cpp  entity.h  outside_building.h  range_unit.h  suburb_building.h
source/sfml_facades/: assets_manager.cpp  assets_manager.h  event_manager.cpp  event_manager.h  image_manager.cpp  image_manager.h  library_facade.cpp  library_facade.h  screen.cpp  screen.h
source/sfml_facades/utility/: constructors.h  sfml_color.cpp  sfml_color.h
source/sprites/: sprite.h
source/sprites/cell/: cell.cpp  cell.h  coord_translation.cpp  coord_translation.h  hexagon.cpp  hexagon.h
source/sprites_groups/: scene.cpp  scene.h  sprites_group.cpp  sprites_group.h
source/sprites_groups/game_scene/: game_scene.cpp  game_scene.h  grid.cpp  grid.h
source/utility/: all_usings.h  apply_function_for_objects.h  arrow_key_press_info.h  color.cpp  color.h  event_info.h  fps_counter.cpp  fps_counter.h  geometry.cpp  geometry.h  map_additional_functions.h  object_size.cpp  object_size.h  point.cpp  point.h  rectangle.h  rounded_rectangle.cpp  rounded_rectangle.h  segment.cpp  segment.h  set_additional_functions.h  vector2d.cpp  vector2d.h
